syntax = "proto3";

package example;

option java_package = "com.proto.example";
option java_multiple_files = true;

message AuditMessage{
    string hashcode=1;
    string account=2;
}

message AuditRequest {
    AuditMessage msg = 1;
}

message AuditResponse {
    string result = 1;
}


service AuditService {
    rpc Audit(AuditMessage) returns (AuditResponse) {};
}